test/libyul/yulSyntaxTests/setimmutable_shadowing.yul
{
    function setimmutable(a, b) {}
}
// ====
// dialect: evm
// ----
// ParserError 5568: (15-27='setimmutable'): Cannot use builtin function name "setimmutable" as identifier name.
